# komiteo

./: .gitignore  APIkey.md  Cargo.toml  LICENSE  README.md  configSuccess.md  configUI.md  go.mod  homeUI.md  main.go  ui.md
src/: agent.rs  ai.rs  app.rs  cil.rs  config.rs  hello.rs  logo.rs  main.rs  tui.rs
src/_components/: hello.rs
src/components/: home.rs
