[package]
name = "komity"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.1.1"
ratatui = "0.26"
crossterm = "0.29.0"
toml = "1.0.6"
futures-util = "0.3.32"
dirs = "6.0.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"