[package]
name = "komity"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
color-eyre = "0.6"
crossterm = "0.29.0"
toml = "1.0.6"
futures-util = "0.3.32"
dirs = "6.0.0"
openrouter-rs = "0.6.1"
tokio = { version = "1", features = ["full"] }
ratatui-image = { version = "10.0.6", default-features = false, features = ["image-defaults", "crossterm"] }
image = "0.24"